--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -5,10 +5,18 @@ spring:
     url: jdbc:postgresql://localhost:5432/urban_server
     username: postgres
     password: root
-    driver-class-name: org.postgresql.Driver
-
   jpa:
-    database-platform: org.hibernate.dialect.PostgreSQLDialect
     show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+        format_sql: true
     hibernate:
-      ddl-auto: update
+      ddl-auto: validate
+  output:
+    ansi:
+      enabled: ALWAYS
+  flyway:
+    enabled: true
+    locations: classpath:db/migration
+    baseline-on-migrate: true
