--- a/server/src/main/resources/application.yaml
+++ b/server/src/main/resources/application.yaml
@@ -60,4 +60,4 @@ logging:
   level:
     liquibase: INFO
     org.hibernate: INFO
-    org.springframework: INFO
+    org.springframework.web: DEBUG
